--- a/psalg/psalg/geometry/CMakeLists.txt
+++ b/psalg/psalg/geometry/CMakeLists.txt
@@ -22,6 +22,7 @@ target_include_directories(geometry PUBLIC
 find_library(CURL_LIBRARY curl PATH $ENV{CONDA_PREFIX}/lib)
 
 target_link_libraries(geometry ${OpenMP_CXX_FLAGS}
+    utils
     xtcdata::xtc
     ${CURL_LIBRARY}
 )
