--- a/psalg/psalg/utils/CMakeLists.txt
+++ b/psalg/psalg/utils/CMakeLists.txt
@@ -11,6 +11,7 @@ target_include_directories(utils PUBLIC
 install(FILES
     Logger.hh
     Utils.hh
+    MacTimeFix.hh
     DirFileIterator.hh
     DESTINATION include/psalg/utils
 )
