--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -21,21 +21,21 @@ procmgr_config = [
  { host: collect_host, id: 'control', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -C BEAM -B DAQ:LAB2 -x 2 -P TMO'},
  { id:'control_gui', flags: 'xp', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 
- { host: 'drp-tst-dev001', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -C ' + collect_host},
+ { host: 'drp-tst-dev003', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -C ' + collect_host},
 
- { host: 'drp-tst-dev002', id:'drp02', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 2' },
+ { host: 'drp-tst-dev002', id:'drp02', flags:'spx', conda:conda_rel, cmd: drp_cmd + ' -s 2' },
  #{ host: 'drp-tst-dev003', id:'drp03', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 3' },
  #{ host: 'drp-tst-dev004', id:'drp04', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 4' },
  #{ host: 'drp-tst-dev005', id:'drp05', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 5' },
  #{ host: 'drp-tst-dev007', id:'drp07', flags:'spu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev009', id:'drp09', flags:'sp', conda:conda_rel, cmd: drp_cmd + '-s 9' },
- #{ host: 'drp-tst-dev011', id:'drp11', flags:'sp', conda:conda_rel, cmd: drp_cmd + '-s 11' },
- #{ host: 'drp-tst-dev012', id:'drp12', flags:'sxpu', conda:conda_rel, cmd: drp_cmd }
- #{ host: 'drp-tst-dev013', id:'drp13', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev014', id:'drp14', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev015', id:'drp15', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev017', id:'drp17', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev018', id:'drp18', flags:'sxpu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev009', id:'drp09', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 9' },
+ #{ host: 'drp-tst-dev011', id:'drp11', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 11' },
+ #{ host: 'drp-tst-dev012', id:'drp12', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 11' }
+ #{ host: 'drp-tst-dev013', id:'drp13', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 11' },
+ #{ host: 'drp-tst-dev014', id:'drp14', flags:'sp', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev015', id:'drp15', flags:'sp', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev017', id:'drp17', flags:'sp', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev018', id:'drp18', flags:'sp', conda:conda_rel, cmd: drp_cmd },
 
  #{ host: 'drp-tst-dev019', id:'meb1', flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P Test -d -q 4 -C '+collect_host},
 ]
