--- a/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
+++ b/psdaq/psdaq/cnf/lab3-dubrovin-cam.cnf
@@ -28,7 +28,7 @@ procmgr_config = [
  # trigger event builder
  { host: 'drp-tst-dev001', id:'teb1', flags:'spu', conda:conda_rel, cmd:'teb -C '+collect_host},
  # cameras
- { host: 'drp-tst-dev007', id:'cam0_0', flags:'sp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -n cam0 -d /dev/datadev_0 -s0 -o /tmp -C '+collect_host},
- { host: 'drp-tst-dev011', id:'cam1_0', flags:'sp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -n cam1 -d /dev/datadev_0 -s0 -o /tmp -C '+collect_host},
- { host: 'drp-tst-dev012', id:'cam1_1', flags:'sp', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -n cam1 -d /dev/datadev_0 -s1 -o /tmp -C '+collect_host}
+ { host: 'drp-tst-dev007', id:'cam0_0', flags:'spu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host},
+ { host: 'drp-tst-dev011', id:'cam1_0', flags:'spu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host},
+ { host: 'drp-tst-dev012', id:'cam1_1', flags:'spu', conda:conda_rel, cmd:'drp -l 0xf -D AreaDetector -d /dev/datadev_0 -o /tmp -C '+collect_host}
 ]
