--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -11,7 +11,7 @@ ip_addr = '10.0.'+shelf
 collect_host = 'drp-tst-acc06'
 
 # -o /ffb01/weninc
-drp_cmd = 'drp -D AreaDetector -l 0x1 -n cam -d /dev/datadev_0 -C ' + collect_host
+drp_cmd = 'drp -D AreaDetector -l 0x1 -d /dev/datadev_0 -C ' + collect_host
 
 procmgr_config = [
  { id:'partca-' + platform ,flags: 's', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
@@ -23,19 +23,19 @@ procmgr_config = [
 
  { host: 'drp-tst-dev001', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -C ' + collect_host},
 
- { host: 'drp-tst-dev002', id:'drp02', flags:'spx', conda:conda_rel, cmd: drp_cmd + ' -s 2' },
- #{ host: 'drp-tst-dev003', id:'drp03', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 3' },
- #{ host: 'drp-tst-dev004', id:'drp04', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 4' },
- #{ host: 'drp-tst-dev005', id:'drp05', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 5' },
- #{ host: 'drp-tst-dev007', id:'drp07', flags:'spu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev009', id:'drp09', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 9' },
- #{ host: 'drp-tst-dev011', id:'drp11', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 11' },
- #{ host: 'drp-tst-dev012', id:'drp12', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 11' }
- #{ host: 'drp-tst-dev013', id:'drp13', flags:'sp', conda:conda_rel, cmd: drp_cmd + ' -s 11' },
- #{ host: 'drp-tst-dev014', id:'drp14', flags:'sp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev015', id:'drp15', flags:'sp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev017', id:'drp17', flags:'sp', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev018', id:'drp18', flags:'sp', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev002', id:'cam_2',  flags:'spxu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev003', id:'cam_3',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev004', id:'cam_4',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev005', id:'cam_5',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev007', id:'cam_7',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev009', id:'cam_9',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev011', id:'cam_11', flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev012', id:'cam_12', flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev013', id:'cam_13', flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev014', id:'cam_14', flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev015', id:'cam_15', flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev017', id:'cam_17', flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ #{ host: 'drp-tst-dev018', id:'cam_18', flags:'spu', conda:conda_rel, cmd: drp_cmd },
 
  #{ host: 'drp-tst-dev019', id:'meb1', flags:'sxpu', conda:conda_rel, cmd:'monReqServer -P Test -d -q 4 -C '+collect_host},
 ]
