--- a/psalg/CMakeLists.txt
+++ b/psalg/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 find_package(xtcdata REQUIRED)
+find_package(CURL REQUIRED)
 
 enable_testing()
 
