--- a/psalg/CMakeLists.txt
+++ b/psalg/CMakeLists.txt
@@ -1,12 +1,9 @@
-cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
+
+project(psalg)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.0")
-    message(FATAL_ERROR "Insufficient gcc version")
-  endif()
-endif()
 
 add_compile_options(-Wall)
 add_compile_options(-Wno-uninitialized)
@@ -17,7 +14,28 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 find_package(xtcdata REQUIRED)
 find_package(CURL REQUIRED)
+find_package(OpenMP REQUIRED)
 
 enable_testing()
 
 add_subdirectory(psalg)
+
+include(CMakePackageConfigHelpers)
+
+install(EXPORT psalgTargets
+    FILE psalgTargets.cmake
+    NAMESPACE psalg::
+    DESTINATION lib/cmake/psalg
+)
+
+configure_package_config_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/psalgConfig.cmake.in"
+    ${CMAKE_CURRENT_BINARY_DIR}/psalgConfig.cmake
+    INSTALL_DESTINATION lib/cmake/psalg
+    NO_CHECK_REQUIRED_COMPONENTS_MACRO
+)
+
+install(
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/psalgConfig.cmake
+    DESTINATION lib/cmake/psalg
+)
