--- a/xtcdata/CMakeLists.txt
+++ b/xtcdata/CMakeLists.txt
@@ -1,17 +1,14 @@
-cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
+
+project(xtcdata)
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.0")
-    message(FATAL_ERROR "Insufficient gcc version")
-  endif()
-endif()
+find_package(RapidJSON REQUIRED)
 
 set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
-
-find_package(RapidJSON REQUIRED)
 
 # cmake commands to possibly use in the future
 
@@ -33,3 +30,23 @@ find_package(RapidJSON REQUIRED)
 #endif()
 
 add_subdirectory(xtcdata)
+
+include(CMakePackageConfigHelpers)
+
+install(EXPORT xtcdataTargets
+    FILE xtcdataTargets.cmake
+    NAMESPACE xtcdata::
+    DESTINATION lib/cmake/xtcdata
+)
+
+configure_package_config_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/xtcdataConfig.cmake.in"
+    ${CMAKE_CURRENT_BINARY_DIR}/xtcdataConfig.cmake
+    INSTALL_DESTINATION lib/cmake/xtcdata
+    NO_CHECK_REQUIRED_COMPONENTS_MACRO
+)
+
+install(
+    FILES ${CMAKE_CURRENT_BINARY_DIR}/xtcdataConfig.cmake
+    DESTINATION lib/cmake/xtcdata
+)
