--- a/psdaq/psdaq/cnf/lab3-hsd134.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd134.cnf
@@ -2,6 +2,8 @@ platform = '0'
 username = 'lcls2'
 expname  = 'expname'
 expnum   = 'expnum'
+#groups = platform
+groups = '0 5'
 
 epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255'
 conda_rel = 'ps-2.0.1'
@@ -24,7 +26,7 @@ collect_host = 'drp-tst-acc06'
 
 procmgr_config = [
 # {                        id:'partca',flags:'s', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
- {                        id:'groupca',flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+platform},
+ {                        id:'groupca',flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                        id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 # {                        id:'modca'  ,flags:'s', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
 
