--- a/psdaq/psdaq/cnf/lab3-hsd134_cg.cnf
+++ b/psdaq/psdaq/cnf/lab3-hsd134_cg.cnf
@@ -7,6 +7,8 @@ epics_env = 'EPICS_PVA_ADDR_LIST=172.21.42.255'
 conda_rel = 'ps-2.0.1'
 
 collect_host = 'drp-tst-acc06'
+#groups = platform
+groups = '0 5'
 
 # procmgr FLAGS: <port number> static port number to keep executable
 #                              running across multiple start/stop commands.
@@ -23,7 +25,7 @@ collect_host = 'drp-tst-acc06'
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- {                        id:'groupca',flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+platform},
+ {                        id:'groupca',flags:'s', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 '+groups},
  {                        id:'procstat', flags:'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
 
  {                        id:'hsdpvs_3e', port:'29074', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdpvs -P DAQ:LAB2:HSD:DEV06_3E'},
@@ -39,7 +41,7 @@ procmgr_config = [
  { host: 'drp-tst-dev023', id:'shmc', flags:'sx', conda:conda_rel, cmd:'shmemClient -p TMO -i 0'},
 # {                      , id:'ami', flags:'', conda:conda_rel, cmd:'ami-local shmem://examples/shmem.json'},
 
- { host: collect_host    , id:'Collection', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -P TMO -B DAQ:LAB2 -x 2'},
+ { host: collect_host    , id:'Collection', flags:'sxpu', conda:conda_rel, env:epics_env, cmd:'control -v -P TMO -B DAQ:LAB2 -x 2 -C BEAM'},
  {                        flags:'xp', id:'control_gui', conda:conda_rel, cmd:'control_gui -H '+collect_host},
 
 ]
