clean up psdaq cmake

--- a/psdaq/CMakeLists.txt
+++ b/psdaq/CMakeLists.txt
@@ -1,4 +1,8 @@
-cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
+
+project(psdaq)
+
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 add_compile_options(-Wall)
 add_compile_options(-Wno-uninitialized)
@@ -6,28 +10,23 @@ add_compile_options(-fno-omit-frame-pointer)
 
 find_package(xtcdata REQUIRED)
 find_package(psalg REQUIRED)
+find_package(libfabric REQUIRED)
+find_package(PythonLibs REQUIRED)
+find_package(prometheus-cpp REQUIRED)
+find_package(ZeroMQ REQUIRED)
+find_package(epics REQUIRED)
+find_package(cpsw REQUIRED)
 
-find_library(EPICS_PVACCESS_LIB pvAccess PATH $ENV{CONDA_PREFIX}/lib)
-find_library(EPICS_PVDATA_LIB pvData PATH $ENV{CONDA_PREFIX}/lib)
-find_library(EPICS_PVACLIENT_LIB pvaClient PATH $ENV{CONDA_PREFIX}/lib)
-find_library(EPICS_CA_LIB ca PATH $ENV{CONDA_PREFIX}/lib)
-
-
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-  if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.0")
-    message(FATAL_ERROR "Insufficient gcc version")
-  endif()
-endif()
+find_library(YAML_CPP_LIB yaml-cpp)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib;$ENV{CONDA_PREFIX}/lib")
-# We are explicitly added the conda lib to the RPATH and stopping others paths from
-# being added implicitly by link_directories
-#set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
-link_directories($ENV{CONDA_PREFIX}/lib)
+# This is a temporary fix to pick up the new lib libstdc++ from conda
+link_directories(${CMAKE_PREFIX_PATH}/lib)
 
 add_subdirectory(psdaq)
 add_subdirectory(drp)
