--- a/psdaq/psdaq/bld/CMakeLists.txt
+++ b/psdaq/psdaq/bld/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(bld SHARED
 
 target_include_directories(bld PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-    $ENV{CONDA_PREFIX}/include
+    $<INSTALL_INTERFACE:include>
 )
 
 install(TARGETS bld
