--- a/psdaq/psdaq/epicstools/CMakeLists.txt
+++ b/psdaq/psdaq/epicstools/CMakeLists.txt
@@ -6,14 +6,14 @@ add_library(epicstools SHARED
 
 target_include_directories(epicstools PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
-    $ENV{CONDA_PREFIX}/epics/include
-    $ENV{CONDA_PREFIX}/epics/include/os/Linux
-    $ENV{CONDA_PREFIX}/epics/include/compiler/gcc
+    $<INSTALL_INTERFACE:include>
 )
 
 target_link_libraries(epicstools
-    ${EPICS_PVACCESS_LIB}
-    ${EPICS_PVDATA_LIB}
+    epics::pvAccess
+    epics::pvData
+    #epics::pvaClient
+    #epics::ca
 )
 
 install(TARGETS epicstools
