--- a/psdaq/psdaq/cnf/lab3-base.cnf
+++ b/psdaq/psdaq/cnf/lab3-base.cnf
@@ -26,19 +26,22 @@ ip_addr = '10.0.'+shelf
 #        'u'         -> uniqueid: use 'id' as detector alias (supported by acq, cam, camedt, evr, and simcam)
 
 procmgr_config = [
- { host: epics_host,  id:'partcas', port:'29450', flags:'s', conda:conda_rel, env:epics_env, cmd:'partcas -P DAQ:LAB2'},
- { host: epics_host,  id:'modcas' , port:'29451', flags:'s', conda:conda_rel, env:epics_env, cmd:'modcas -P DAQ:LAB2:XPM:'+shelf},
- { host: epics_host,  id:'xpmioc' , port:'29452', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
- { host: epics_host,  id:'dticas' , port:'29453', flags:'s', conda:conda_rel, env:epics_env, cmd:'dticas -P DAQ:LAB2:DTI:'+shelf},
- { host: epics_host,  id:'dtiioc-103', port:'29455', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.103 -P DAQ:LAB2:DTI:'+shelf+':3' },
- { host: epics_host,  id:'dtiioc-104', port:'29454', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.104 -P DAQ:LAB2:DTI:'+shelf+':4' },
+# { host: epics_host,  id:'partcas', port:'29450', flags:'s', conda:conda_rel, env:epics_env, cmd:'partcas -P DAQ:LAB2'},
+# { host: epics_host,  id:'modcas' , port:'29451', flags:'s', conda:conda_rel, env:epics_env, cmd:'modcas -P DAQ:LAB2:XPM:'+shelf},
+# { host: epics_host,  id:'xpmioc' , port:'29452', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
+# { host: epics_host,  id:'xpmioc' , port:'29452', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a '+ip_addr+'.102 -P DAQ:LAB2'},
+# { host: epics_host,  id:'dticas' , port:'29453', flags:'s', conda:conda_rel, env:epics_env, cmd:'dticas -P DAQ:LAB2:DTI:'+shelf},
+# { host: epics_host,  id:'dtiioc-103', port:'29455', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.103 -P DAQ:LAB2:DTI:'+shelf+':3' },
+# { host: epics_host,  id:'dtiioc-104', port:'29454', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.104 -P DAQ:LAB2:DTI:'+shelf+':4' },
 # { host: epics_host,  id:'dtiioc-105', port:'29456', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.105 -P DAQ:LAB2:DTI:'+shelf+':5' },
 # { host: epics_host,  id:'dtiioc-106', port:'29457', flags:'s', conda:conda_rel, env:epics_env, cmd:'dtiPVs -a '+ip_addr+'.106 -P DAQ:LAB2:DTI:'+shelf+':6' },
  # { host: epics_host,  id:'hsdcas-dev01', port:'29462', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV01'},
  { host: epics_host,  id:'hsdcas-dev02', port:'29458', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV02'},
- { host: epics_host,  id:'hsdcas-dev06', port:'29459', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV06'},
- { host: epics_host,  id:'modcas-1', port:'29460', flags:'s', conda:conda_rel, env:epics_env, cmd:'modcas -P DAQ:LAB2:XPM:1'},
- { host: epics_host,  id:'xpmioc-1', port:'29461', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a 10.0.1.103 -P DAQ:LAB2'},
+# { host: epics_host,  id:'hsdcas-dev06', port:'29459', flags:'s', conda:conda_rel, env:epics_env, cmd:'hsdcas -P DAQ:LAB2:HSD:DEV06'},
+# { host: epics_host,  id:'modcas-1', port:'29460', flags:'s', conda:conda_rel, env:epics_env, cmd:'modcas -P DAQ:LAB2:XPM:1'},
+# { host: epics_host,  id:'xpmioc-1', port:'29461', flags:'s', conda:conda_rel, env:epics_env, cmd:'xpmPVs -a 10.0.1.103 -P DAQ:LAB2'},
+ { host: epics_host,  id:'xpmioc'  , port:'29451', flags:'s', conda:conda_rel, env:epics_env, cmd:'pyxpm --ip 10.0.2.102 -P DAQ:LAB2:XPM:2'},
+ { host: 'daq-tst-dev03',  id:'xpmioc-1', port:'29452', flags:'s', conda:conda_rel, env:epics_env, cmd:'pyxpm --ip 10.0.1.103 -P DAQ:LAB2:XPM:1'},
 
 ## BLD service
  { host: epics_host,  id:'hpsdbuscas', port:'29463', flags:'s', conda:conda_rel, env:epics_env, cmd:'hpsdbuscas -P DAQ:LAB2:HPSEX'},
