--- a/psdaq/psdaq/cnf/lab3-weninc.cnf
+++ b/psdaq/psdaq/cnf/lab3-weninc.cnf
@@ -14,7 +14,8 @@ collect_host = 'drp-tst-acc06'
 drp_cmd = 'drp -D AreaDetector -l 0x1 -d /dev/datadev_0 -C ' + collect_host
 
 procmgr_config = [
- { id:'partca-' + platform ,flags: 's', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+ #{ id:'partca-' + platform ,flags: 's', conda:conda_rel, env:epics_env, cmd:'partca DAQ:LAB2:PART:'+platform},
+ { id:'groupca', flags: 's', conda:conda_rel, env:epics_env, cmd:'groupca DAQ:LAB2 2 2'},
  { id:'procstat', flags: 'sp', conda:conda_rel, cmd:'procstat -t '+username+' -e0 -n none p'+platform+'.cnf.last'},
  { id:'modca1', flags: 's', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:1'},
  { id:'modca2', flags: 's', conda:conda_rel, env:epics_env, cmd:'modca DAQ:LAB2:XPM:2'},
@@ -23,8 +24,10 @@ procmgr_config = [
 
  { host: 'drp-tst-dev001', id:'teb1', flags:'sxpu', conda:conda_rel, cmd:'teb -C ' + collect_host},
 
- { host: 'drp-tst-dev002', id:'cam_2',  flags:'spxu', conda:conda_rel, cmd: drp_cmd },
- #{ host: 'drp-tst-dev003', id:'cam_3',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev002', id:'bld', flags:'sxpu', conda:conda_rel, cmd:'drp_bld -d /dev/datadev_0 -C ' + collect_host},
+
+ #{ host: 'drp-tst-dev002', id:'cam_2',  flags:'spxu', conda:conda_rel, cmd: drp_cmd },
+ { host: 'drp-tst-dev003', id:'cam_3',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev004', id:'cam_4',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev005', id:'cam_5',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
  #{ host: 'drp-tst-dev007', id:'cam_7',  flags:'spu', conda:conda_rel, cmd: drp_cmd },
