work in progress on AreaDetectorPnccd

--- a/psalg/psalg/detector/CMakeLists.txt
+++ b/psalg/psalg/detector/CMakeLists.txt
@@ -6,8 +6,10 @@ add_library(detector SHARED
     src/DetectorStore.cc
     src/UtilsConfig.cc
     src/AreaDetector.cc
-    src/AreaDetectorEpix100a.cc
     src/AreaDetectorJungfrau.cc
+    src/AreaDetectorPnccd.cc
+    src/AreaDetectorEpix100a.cc
+    #src/AreaDetectorCspad.cc
     src/AreaDetectorStore.cc
 )
 
@@ -29,8 +31,10 @@ install(FILES
     UtilsConfig.hh
     AreaDetector.hh
     AreaDetectorStore.hh
-    AreaDetectorEpix100a.hh
     AreaDetectorJungfrau.hh
+    AreaDetectorPnccd.hh
+    AreaDetectorEpix100a.hh
+    #AreaDetectorCspad.hh
     DataSourceSimulator.hh
     DESTINATION include/psalg/detector
 )
