--- a/psalg/CMakeLists.txt
+++ b/psalg/CMakeLists.txt
@@ -15,9 +15,10 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 find_package(xtcdata REQUIRED)
-find_package(roentdek REQUIRED)
 find_package(CURL REQUIRED)
 find_package(OpenMP REQUIRED)
+# we don't have this package for all OS's, so make it optional
+find_package(roentdek)
 
 enable_testing()
 
