--- a/psalg/psalg/hexanode/CMakeLists.txt
+++ b/psalg/psalg/hexanode/CMakeLists.txt
@@ -1,12 +1,30 @@
 add_library(hexanode SHARED
-    src/hexanode.cc
+    #src/hexanode.cc
+    #src/cfib.cc
+    src/wrap_resort64c.cc
+    src/LMF_IO.cc
 )
 
 target_link_libraries(hexanode
-    roentdek::roentdek
+    roentdek::resort64c
 )
 
 target_include_directories(hexanode PUBLIC
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
     $<INSTALL_INTERFACE:include>
+)
+
+install(FILES
+    #cfib.hh
+    wrap_resort64c.hh
+    LMF_IO.hh
+    SortUtils.hh
+    DESTINATION include/psalg/hexanode
+)
+
+install(TARGETS hexanode
+    EXPORT psalgTargets
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    RUNTIME DESTINATION bin
 )
