--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,5 @@ notifications:
   email:
     recipients:
       - cpo@slac.stanford.edu
-    on_success: never # default: change
+    on_success: change # default: change
     on_failure: always # default: always
